[package]
name = "create_files"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
crc32fast = "1.3.2"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"

[lib]
name = "libactionkv"
path = "src/lib.rs"
